# GreenInHouse_PlantPot

./: GIH-deploy_backend.sh  GIH-deploy_clean_backend.sh  GIH-install_backend.sh  GIH-install_wifi_dongle(revisar).sh  GIH-read_db.sh  GIH-read_sensors.sh  GIH-reinstall_backend.sh  GIH-reinstall_clean_backend.sh  GIH-run_api_rest.sh  GIH-run_periodic_read_sensors.sh  GIH-start_backend.sh  GIH-stop_backend.sh  GreenInHouseBackend.sqlite3.db  LICENSE.txt  README.md  configuracion raspberry  deploy_backend.sh  install_backend.sh  install_wifi_dongle.sh  redeploy_backend.sh  redeploy_clean_backend.sh  reinstall_backend.sh  reinstall_clean_backend.sh  run_backend.sh  shell_script_interactuacion
components/: shell_script
components/backend/: GIH-initialize.sh  GIH-install.sh  GIH-start-api-rest.sh  GIH-start-read-db.sh  GIH-start-read-sensors.sh  README.md  initialize.sh  setup.cfg  start.sh
components/backend/backend/: __init__.py
components/backend/backend/data/: __init__.py
components/backend/backend/data/config/: __init__.py  backendconfiguration.py
components/backend/backend/data/db/: __init__.py  esquema.py
components/backend/backend/data/electronic/: __init__.py  factoria_sensor_electronico.py  sensor_electronico  sensor_electronico.py  sensor_electronico_BH1750.py  sensor_electronico_DHT11.py  sensor_electronico_FC28.py  sensor_electronico_LDR.py  sensor_electronico_LM35.py  sensor_electronico_MCP3008.py
components/backend/backend/data/util/: __init__.py  factoria_sensor.py  sensor.py  sensor_backend.py
components/backend/backend/openapi/: spec.yml
components/backend/backend/presentation/: __init__.py
components/backend/backend/presentation/rest/: __init__.py  consejo_planta_rest.py  consejo_tipo_planta_rest.py  general.py  planta_rest.py  registro_sensor.py  registro_sensor_rest copy.py  registro_sensor_rest.py  security_rest.py  sensor_planta_rest.py  sensor_rest.py  server.py  server_rest.py  tipo_planta_rest.py
components/backend/backend/service/: __init__.py  consejo_planta_service.py  consejo_tipo_planta_service.py  electronic_sensor_service.py  general_service.py  planta_service.py  registro_planta_service.py  registro_sensor_service.py  registro_tipo_planta_service.py  sensor_planta_service.py  sensor_service.py  tipo_planta_service.py
components/frontend/: GIH-install.sh  README.md  setup.cfg  setup.py
components/frontend/frontend/app/: __init__.py
components/frontend/frontend/app/flutter_flow/: __init__.py
components/frontend/frontend/app/rpi/: __init__.py  principal.py  secundaria.py  ventana_configurar_wifi.py  ventana_principal.py  ventana_teclado.py
(+159 files in other folders)
