[metadata]
name = backend
version = attr: backend.VERSION
description = Green In House backend service
long_description = file: README.md
keywords = GreenInHouse, ubu, backend, service
license = MIT License

[options]
packages = find:
zip_safe = False
include_package_data = True
scripts =
    bin/GIH-backend-read-sensors
    bin/GIH-backend-read-db
    bin/GIH-backend-api-rest
    bin/GIH-backend-create-initial
    bin/GIH-backend-create-trial-initial
install_requires = cryptography==39.0.0; authlib==1.2.0; sqlalchemy==2.0.0b3; flask==2.2.5; requests==2.31.0; pyyaml==6.0; connexion==2.14.2; connexion[swagger-ui]==2.14.2; gpiod==1.5.4; adafruit-circuitpython-dht==4.0.2; adafruit-circuitpython-mcp3xxx==1.4.14; arrow==1.2.3; common

