[metadata]
name = frontend
version = attr: frontend.VERSION
description = Green In House frontend service
long_description = file: README.md
keywords = GreenInHouse, ubu, frontend, library
license = MIT License

[options]
packages = find:
zip_safe = False
include_package_data = True
install_requires = appdirs; pyyaml; tk; common
