[metadata]
name = frontend
version = attr: frontend.VERSION
description = Green In House frontend service
long_description = file: README.md
keywords = GreenInHouse, ubu, frontend, library
license = MIT License

[options]
packages = find:
zip_safe = False
include_package_data = True
scripts =
    bin/GIH-frontend-app-rpi
install_requires = appdirs==1.4.4; pyyaml==6.0; tk==0.1.0; common
